# synthetmic

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: publish.yml
examples/: analyse.py  params.py  recreate_2d.py  recreate_3d.py  utils.py  voronoi.py
examples/notebooks/laguerre/: 2d_basic_usage.ipynb  3d_basic_usage.ipynb  Banded_periodic.ipynb  Lognormal_microstructure.ipynb
examples/notebooks/utils/: mesh_diagram.ipynb
examples/notebooks/voronoi/: 2d_basic_usage.ipynb  3d_basic_usage.ipynb
src/synthetmic/: __init__.py  generate.py  plot.py  utils.py
src/synthetmic/_internal/: _consts.py  _data.py  _errors.py  _validate.py
src/synthetmic/data/: paper.py  toy.py  utils.py
tests/: get_vertices_test.py  ldg_test.py  utils_test.py  vdg_test.py
