[project]
name = "synthetmic"
version = "0.1.4"
description = "A Python package for generating synthetic Laguerre polycrystalline microstructures"
readme = "README.md"
authors = [
    { name = "R. O. Ibraheem", email = "ibraheem.abdulrasheed@gmail.com" },
    { name = "D. P. Bourne", email = "D.Bourne@hw.ac.uk" },
    { name = "S. M. Roper", email = "Steven.Roper@glasgow.ac.uk" },
]
maintainers = [
    { name = "R. O. Ibraheem", email = "ibraheem.abdulrasheed@gmail.com" },
    { name = "D. P. Bourne", email = "D.Bourne@hw.ac.uk" },
    { name = "S. M. Roper", email = "Steven.Roper@glasgow.ac.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pysdot==0.2.38",
    "pyvista[jupyter]>=0.45.2",
    "scipy>=1.15.3",
    "vtk>=9.4.2",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
homepage = "https://github.com/synthetic-microstructures/synthetmic"
issues = "https://github.com/synthetic-microstructures/synthetmic/issues"

[project.optional-dependencies]
cli = [
    "click>=8.2.1",
]
examples = []
tests = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/tests",
  "examples",
  "assets",
  "cli.py",
]
